@@ -1,5 +1,7 @@
 package gov.govcircle.common.security.config;
 
+import gov.govcircle.common.config.Configs;
+import gov.govcircle.common.security.filter.SignatureAuthenticationEntryPoint;
 import gov.govcircle.common.security.manager.CustomAuthenticationManager;
 import gov.govcircle.common.security.provider.UserAddressSignatureAuthenticationProvider;
 import gov.govcircle.common.security.filter.AuthenticationFilter;
@@ -17,35 +19,45 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
+
 
 @Configuration
 @RequiredArgsConstructor
 public class SecurityConfig {
-
     private final JwtAuthorizationFilter jwtAuthFilter;
     private final UserAddressSignatureAuthenticationProvider userAddressSignatureAuthenticationProvider;
+    private final SignatureAuthenticationEntryPoint signatureAuthenticationEntryPoint;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
+                .cors(crs -> crs.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/verify-signature", "/generate-nonce", "/free").permitAll()
-                        .requestMatchers("/not").hasRole("SIMPLE")
-                        .anyRequest().authenticated()
+//                                .anyRequest().permitAll()
+                                .requestMatchers(
+                                        Configs.URLS.REST_VERIFY_SIGNATURE_ENDPOINT,
+                                        Configs.URLS.REST_GENERATE_NONCE_ENDPOINT,
+                                        Configs.URLS.REST_FREE_ENDPOINT
+                                ).permitAll()
+                                .requestMatchers(
+                                        Configs.URLS.REST_PROFILE_PATH + "/**"
+                                ).hasAnyRole(
+                                        Configs.ROLES.DREP_ROLE_TITLE,
+                                        Configs.ROLES.WALLET_ROLE_TITLE,
+                                        Configs.ROLES.SPO_ROLE_TITLE,
+                                        Configs.ROLES.CC_ROLE_TITLE
+                                )
+                                .anyRequest().authenticated()
                 )
                 .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationManager(authenticationManager())
                 .addFilterBefore(authenticationFilter(), UsernamePasswordAuthenticationFilter.class)
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
-
-
+                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+                .exceptionHandling(exCustomizer -> exCustomizer.authenticationEntryPoint(signatureAuthenticationEntryPoint));
         return http.build();
+
     }
 
     @Bean
@@ -69,17 +81,25 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000"
+        configuration.setAllowedOrigins(
+                List.of(
+                        "http://localhost:3000"
 
-        ));
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
-        ));
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization", "Content-Type", "X-Auth-Token",
-                "Origin", "Accept", "X-Requested-With"
-        ));
+                )
+        );
+        configuration.setAllowedMethods(
+                List.of(
+                        "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+
+                )
+        );
+        configuration.setAllowedHeaders(
+                List.of(
+                        "Authorization", "Content-Type", "X-Auth-Token",
+                        "Origin", "Accept", "X-Requested-With"
+
+                )
+        );
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
@@ -87,6 +107,5 @@ public class SecurityConfig {
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
 
 }
